project(test)
set(SRC_LIST0 main.cpp)
set(SRC_LIST1 point.cpp)
set(SRC_LIST2 circle.cpp)
add_library(libcircle ${SRC_LIST2})
add_library(libpoint ${SRC_LIST1})
# set(Circle_DIR /home/lzq/file/c++/04类/07_example03/build/liblibcircle.a )
# set(Point_DIR /home/lzq/file/c++/04类/07_example03/build/liblibpoint.a )
add_executable(main ${SRC_LIST0})
# link_directories(/home/lzq/file/c++/04类/07_example03/build)
target_link_libraries(main libpoint libcircle)
# target_link_libraries(main ${Circle_DIR} ${Point_DIR})